golang/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-demo
  namespace: kubernetes-dashboard
spec:
  selector:
    app: golang-demo
  ports:
    - port: 8011
      name: api
      targetPort: 8011
#      nodePort: 30300
#  type: NodePort
#  externalIPs:
#    - 10.73.56.36
