golang/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-demo
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: k8s-demo.local
    http:
      paths:
        - path: /demo
          pathType: Prefix
          backend:
            service:
              name: golang-demo
              port:
                name: api
        - path: /test
          pathType: Prefix
          backend:
            service:
              name: golang-demo
              port:
                name: api
